{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "8ec97850-4601-4f82-84e2-3b82af161b8e",
            "actions": [
                {
                    "name": "HorizontalMovement",
                    "type": "Button",
                    "id": "7bae2732-7961-47b4-a18b-ef745b871591",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "c026aba6-f58f-49ae-a94d-070974b31884",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClimbUp",
                    "type": "Button",
                    "id": "7e2af10c-4f22-4c7f-90e7-9b3be1cb4b5d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "c75b847b-d9f5-4e49-81f2-c85ac6b7b687",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "eab30899-7040-4822-bf0e-6b9a814ac772",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "488d9975-9331-4ab3-acd4-8fcff02ff317",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "032ff206-476b-4002-9e71-a6ecdf9a0cfc",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87df01da-3991-417d-96ea-b54c5ee89808",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClimbUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}